--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,18 +4,61 @@
 }
 
 body{
-    background-color: #f6f8fc;
+    background-image: url(/assets/img/background.jpg);
 }
 
 .content{
+    margin: 1rem;
     padding: 1rem; 
-    padding-top: 3rem;
-    background-color: #fff;
+    padding-top: 1rem;
+    background-color: rgba(209, 15, 15, 0.95);
+    border-radius: 1rem;
 }
-
+.conteiner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.circle{
+    margin: 1rem;
+    width: 2rem;
+    height: 2rem;
+    background-color: #fff;
+    border-radius: 100%;
+    display:block;
+    border-width: 1px;
+    border-style:outset;
+    border-color: black;
+}
+.circle:nth-child(1){
+    background-color: red;
+    filter: brightness(1.5)
+}
+.circle:nth-child(2){
+    background-color: yellow;
+    filter: brightness(1.5)
+}
+.circle:nth-child(3){
+    background-color: green;
+    filter: brightness(1.5)
+}
+.display{
+    display: flex;
+}
 .content h1{
+    align-self: flex-start;
+    padding-right: 4rem;
     margin:0;
     margin-bottom: 1rem;
-
-
+    font-size: 3rem;
+}
+.backimg{
+    position: absolute;
+    z-index: -1; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7); 
 }
