--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -54,11 +54,11 @@ body{
     font-size: 3rem;
 }
 .backimg{
-    position: absolute;
+    position: fixed;
     z-index: -1; 
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.7); 
+    background-color: rgba(255, 255, 255, 0.7);
 }
