--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -53,7 +53,7 @@ body{
     margin-bottom: 1rem;
     font-size: 3rem;
 }
-.backimg{
+#backimg{
     position: fixed;
     z-index: -1; 
     top: 0;
